Manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: njsdemoapp1 
spec:
  replicas: #replicaNo#
  selector:
    matchLabels:
      app: njsdemoapp1
  template:
    metadata:
      labels:
        app: njsdemoapp1 
    spec:
      containers:
        - name: njsdemoapp1 
          image: gpatfacr1.azurecr.io/njsdemoapp1:latest
          ports:
          - containerPort: 3000
