Manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: njsdemoapp1
spec:
    type: ClusterIP
    ports:
    - port: 3000
    selector:
        app: njsdemoapp1
