Manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: njsdemoapp2-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - http:
        paths:
          - pathType: Exact
            path: /
            backend:
              service:
                name: njsdemoapp2
                port:
                  number: 3000
